# state_growth

./: .gitignore  README.md  pyproject.toml
scripts/: agg_io_per_contract.py
state_growth/: __init__.py  aggregate_utils.py  df_utils.py  path_utils.py  schema_utils.py  spec.py  timestamp_utils.py
state_growth/datasets/: __init__.py  balance_diffs.py  balance_reads.py  contracts.py  logs.py  storage_diffs.py  storage_reads.py  transactions.py
state_growth/datasets/address_labels/: __init__.py  contract_sets.py  label_utils.py  manual_labels.py
state_growth/datasets/hot_cold/: __init__.py  unique_utils.py
state_growth/datasets/io_per_contract/: __init__.py  agg_by_contract.py  io_agg.py  plot_utils.py
state_growth/datasets/node_dbs/: __init__.py  agg_reth_data.py  bytes_per_contract.py  load_reth_data.py
state_growth/filesystem/: __init__.py  agg_data.py  general_data.py  raw_data.py  transform_data.py
state_growth/hot_cold/: unique_utils.py
state_growth/plots/: __init__.py  plot_utils.py
state_growth/spec/: __init__.py  agg_spec.py  filessytem_spec.py  spec.py  time_spec.py
state_growth/timestamps/: __init__.py  block_timestamps_utils.py  timestamp_columns.py  timestamp_intervals.py  timestamp_labels.py  timestamps_load.py
state_growth/transforms/: __init__.py  aggregate_utils.py  transform_utils.py
